--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,10 @@
   --hue-wrong: 0;
   --hue-correct: 145;
 }
-body {
+h1 {
+  text-align: center;
+}
+section {
   --hue: var(--hue-neutral);
   padding: 0;
   margin: 0;
@@ -21,10 +24,10 @@ body {
   background-color: hsl(var(--hue), 100%, 20%);
 }
 
-body.correct {
+section.correct {
   --hue: var(--hue-correct);
 }
-body.wrong {
+section.wrong {
   --hue: var(--hue-wrong);
 }
 .container {
